// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Throughline render goldens > Generate-Unit button is disabled in a live class session (hard block) 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "76ff46e766d922e9",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > Generate-Unit capability wired → toolbar shows the ✨ button 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "e364833e298b3344",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > host-wired empty (history + currentLesson + onOpenLesson) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 24,
  "sha": "df54bff8ff2b512a",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > manual mode (5 props, empty) — empty state + manual-import hint 1`] = `
{
  "buttons": 9,
  "inputs": 1,
  "lengthBucket": 23,
  "sha": "df8f12c91e61be1d",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit (seeded localStorage + matching history) — cards + edges 1`] = `
{
  "buttons": 15,
  "inputs": 1,
  "lengthBucket": 38,
  "sha": "0c4bcec267db074c",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit tolerates a dangling lessonId without crashing (normalize guard) 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 45,
  "sha": "cf7f59ec8d1390d4",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > units-aware empty (history with unitId + units prop) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 24,
  "sha": "df54bff8ff2b512a",
  "svgs": 1,
  "textareas": 0,
}
`;
